dfir_rs/tests/snapshots/surface_context__context_mut@graphvis_dot.snap
---
source: dfir_rs/tests/surface_context.rs
expression: "df.meta_graph().unwrap().to_dot(& Default :: default())"
---
digraph {
    node [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace", style=filled];
    edge [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace"];
    n1v1 [label="(n1v1) source_iter(0..10)", shape=invhouse, fillcolor="#88aaff"]
    n2v1 [label="(n2v1) map(|n| context.add_state(n))", shape=invhouse, fillcolor="#88aaff"]
    n3v1 [label="(n3v1) next_stratum()", shape=invhouse, fillcolor="#88aaff"]
    n4v1 [label="(n4v1) for_each(|handle| {\l    println!(\"{:?}: {}\", handle, unsafe { context.state_ref_unchecked(handle) })\l})\l", shape=house, fillcolor="#ffff88"]
    n5v1 [label="(n5v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n3v1 -> n4v1
    n2v1 -> n5v1
    n1v1 -> n2v1
    n5v1 -> n3v1 [color=red]
    subgraph "cluster n1v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_1v1\nstratum 0"
        n1v1
        n2v1
    }
    subgraph "cluster n2v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_2v1\nstratum 1"
        n3v1
        n4v1
    }
}
