dfir_rs/tests/snapshots/surface_context__context_mut@graphvis_mermaid.snap
---
source: dfir_rs/tests/surface_context.rs
expression: "df.meta_graph().unwrap().to_mermaid(& Default :: default())"
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#8af,stroke:#000,text-align:left,white-space:pre
classDef pushClass fill:#ff8,stroke:#000,text-align:left,white-space:pre
classDef otherClass fill:#fdc,stroke:#000,text-align:left,white-space:pre
linkStyle default stroke:#aaa
1v1[\"(1v1) <code>source_iter(0..10)</code>"/]:::pullClass
2v1[\"(2v1) <code>map(|n| context.add_state(n))</code>"/]:::pullClass
3v1[\"(3v1) <code>next_stratum()</code>"/]:::pullClass
4v1[/"<div style=text-align:center>(4v1)</div> <code>for_each(|handle| {<br>    println!(&quot;{:?}: {}&quot;, handle, unsafe { context.state_ref_unchecked(handle) })<br>})</code>"\]:::pushClass
5v1["(5v1) <code>handoff</code>"]:::otherClass
3v1-->4v1
2v1-->5v1
1v1-->2v1
5v1--x3v1; linkStyle 3 stroke:red
subgraph sg_1v1 ["sg_1v1 stratum 0"]
    1v1
    2v1
end
subgraph sg_2v1 ["sg_2v1 stratum 1"]
    3v1
    4v1
end
